--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,19 @@ nav input {
     border: none;
     border-radius: 5px;
     width: 50%;
+    margin: 1em 0;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    grid-template-rows: repeat(3, 200px);
+    gap: 2em;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery, a {
+    align-items: center;
+    margin: auto;
 }
