--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ nav input {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(4, 200px);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(3, 200px);
     gap: 2em;
     justify-content: center;
